  * Added log levels warning, error and critical. (issue #1)
  * Only compare MAJOR and MINOR for a valid SiriDB version. (issue #2)
  * Added check for maximum number of databases. (issue #3)