@@ -24,8 +24,6 @@ DBPROPS = [
     'drop_threshold']
 
 DEFAULT_CLIENT_PORT = 9000
-DEFAULT_BACKEND_PORT = 9010
-DEFAULT_DB_PATH = '/var/lib/siridb/'
 DEFAULT_CONFIG_FILE = '/etc/siridb/siridb.conf'
 DEFAULT_TIMEZONE = 'NAIVE'
 DEFAULT_BUFFER_SIZE = 1024
@@ -40,19 +38,8 @@ DEFAULT_DROP_THRESHOLD = 1.0
 DBNAME_VALID_NAME = re.compile('^[a-zA-Z][a-zA-Z0-9-_]{,18}[a-zA-Z0-9]$')
 
 DEFAULT_CONFIG = '''
+#
 # Welcome to the SiriDB options file
-#
-# Network access can be controlled with query commands. By default only
-# localhost has access to the database.
-# You might want to add another network/IP and you can do this with the
-# following command:
-#
-#    curl -X POST -d 'q=grant full to network "192.168.10.0/24"' \
-#        -d 'd=my_database' -d 'u=siri' -d 'p=iris' \
-#        'http://localhost:port/query'
-#
-# Note: the user name and password used above are the defaults, maybe you have
-#       changed them...
 #
 
 [buffer]
